--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,29 @@
+:root {
+  --primary-color: #14bdac;
+  --primary-color-light: #c8f9f4;
+  --text-color: #063732;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 14px 'Century Gothic', Futura, sans-serif;
   margin: 20px;
+  background-color: var(--primary-color);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  color: var(--text-color);
 }
 
 ol,
 ul {
   padding-left: 30px;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .board-row:after {
@@ -19,8 +37,8 @@ ul {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background-color: var(--primary-color);
+  border: 2px solid var(--text-color);
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -33,8 +51,28 @@ ul {
   width: 34px;
 }
 
+.square.white {
+  color: #fff;
+}
+
 .square:focus {
   outline: none;
+}
+
+.square:first-of-type {
+  border-left-color: transparent;
+}
+
+.square:last-of-type {
+  border-right-color: transparent;
+}
+
+.board-row.ceil .square {
+  border-top-color: transparent;
+}
+
+.board-row.floor .square {
+  border-bottom-color: transparent;
 }
 
 .kbd-navigation .square:focus {
@@ -43,9 +81,23 @@ ul {
 
 .game {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .game-info {
   margin-left: 20px;
+}
+
+main {
+  display: flex;
+}
+
+li button {
+  border: 2px solid transparent;
+  border-radius: 8px;
+  margin-bottom: 4px;
+}
+
+button {
+  outline: none;
 }
